# ks-game

./: .travis.yml  CLAUDE.md  LICENSE  README.md  RELEASE-NOTES.md  berkeley.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_test.sh  run_tests.py  setup.cfg  setup.py
.github/workflows/: codecov.yml
kriegspiel/: __init__.py  berkeley.py  cincinnati.py  crazykrieg.py  english.py  game.py  move.py  rand.py  rulesets.py  serialization.py  snapshot.py  wild16.py
ks_game/: berkeley.py  ks_move.py
scripts/: benchmark_move_generation.py
tests/: run_test.sh  test_berkeley.py  test_cincinnati.py  test_crazykrieg.py  test_english.py  test_game.py  test_move.py  test_performance.py  test_property_based.py  test_rand.py  test_rules_comparison.py  test_rulesets.py  test_serialization.py  test_wild16.py
