[tool.setuptools.dynamic]
version = {attr = "kriegspiel.__version__"}

[project]
name = "kriegspiel"
dynamic = ["version"]
authors = [
  { name="Fil", email="alexander@kriegspiel.org" },
]
description = "Python Kriegspiel Game"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Intended Audience :: Science/Research',
    'Topic :: Games/Entertainment',
    'Operating System :: OS Independent',
]

[project.urls]
"Homepage" = "https://github.com/Kriegspiel/ks-game/"
"Bug Tracker" = "https://github.com/Kriegspiel/ks-game/issues"
