[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kriegspiel"
dynamic = ["version", "readme"]
description = "Python hidden-information chess engine for Berkeley-family Kriegspiel variants"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Fil", email = "alexander@kriegspiel.org" },
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "python-chess",
]

[project.optional-dependencies]
test = [
  "hypothesis>=6",
  "pytest>=9",
  "pytest-cov>=7",
]
dev = [
  "black",
  "build",
  "hypothesis>=6",
  "pytest>=9",
  "pytest-cov>=7",
  "twine",
]

[project.urls]
Homepage = "https://github.com/Kriegspiel/ks-game/"
"Bug Tracker" = "https://github.com/Kriegspiel/ks-game/issues"

[tool.setuptools.dynamic]
version = { attr = "kriegspiel.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools]
packages = ["kriegspiel"]

[tool.pytest.ini_options]
addopts = "--cov=kriegspiel --cov-branch --cov-report=term-missing"
norecursedirs = ["env/*", "build", ".*", "dist"]
markers = [
  "unit: Unit tests for individual components",
  "integration: Integration tests for full game flows",
  "edge_case: Tests for edge cases and boundary conditions",
  "performance: Performance and stress tests",
  "property: Property-based tests using hypothesis",
  "rules: Tests for specific Kriegspiel rules",
  "slow: Slow-running tests that may be skipped in fast CI",
]

[tool.coverage.run]
branch = true
omit = [
  "env/*",
  "setup.py",
  "tests/*",
  "run_tests.py",
]

[tool.coverage.report]
fail_under = 98
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
]
